# intent-classifier-myitihas

./: .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  documentation-intent-classifer.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.txt
.claude/: settings.json
configs/: default.yaml  development.yaml  production.yaml
data/intents/: intent_labels.json
docs/: architecture.md
scripts/: evaluate_classifier.py  generate_embeddings.py  ingest_data.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/routes/: classify.py  health.py
src/api/static/: index.html
src/classifier/: fallback.py  intent_classifier.py  router.py
src/models/: llm.py  schemas.py
src/pipelines/creative/: generator.py
src/pipelines/fallback/: handler.py
src/pipelines/rag/: embeddings.py  retriever.py  vector_store.py
src/prompts/: classifier_prompt.txt  creative_prompt.txt  rag_prompt.txt  system_prompts.py
src/utils/: config.py  helpers.py  logger.py
tests/: conftest.py
tests/fixtures/: sample_queries.json
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_pipelines.py  test_router.py
