[project]
name = "intent-classifier"
version = "0.1.0"
description = "Routes natural language queries to backend pipelines via intent classification"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
